# backchannels-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/core/: __init__.py  logging.py
app/models/: __init__.py  base.py  baseline.py  constants.py  distilbert.py  distilbert_onnx.py  factory.py  predictor.py  s3_loader.py
scripts/: prod_stress_test.py  simple_inference.py  simple_test.py  stress_test.py  test_data.py
tests/: conftest.py  test_api.py  test_core.py  test_models.py
